--- a/style/style.css
+++ b/style/style.css
@@ -7,15 +7,41 @@ body {
     color: #FF42A5;
 }
 
+.para_primary_color {
+    color: #534C64;
+}
+
+.section_title_color {
+    background: linear-gradient(180deg, #F948B2 0%, #8758F1 100%);
+    background-clip: text;
+    font-size: 6rem;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+
+.btn_priamry {
+    border-radius: 48px;
+    background: var(--linear, linear-gradient(90deg, #FF42A5 0%, #FF42A5 100%));
+    font-size: 1.4rem;
+    color: #FFF;
+    padding: 21px 40px;
+    margin: 20px 0;
+    border: 0;
+}
+
+
+
+
 * {
     margin: 0;
     padding: 0;
 }
+
 /* navbar start */
 .navbar {
     background: #FFF;
     box-shadow: 0px 4px 30px 0px rgba(0, 0, 0, 0.05);
-    padding: 20px 240px;
+    padding: 10px 70px;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -41,7 +67,7 @@ body {
 }
 
 .menu li {
-    margin-right: 20px;
+    margin-right: 30px;
     list-style: none;
 }
 
@@ -53,11 +79,94 @@ body {
 }
 
 .contact {
-    padding: 20px;
+    padding: 10px;
     border-radius: 8px;
     background: rgba(11, 2, 35, 0.10);
 }
-.contact img{
-    margin:0 10px;
+
+.contact img {
+    margin: 0 10px;
 }
+
 /* navbar end */
+/* banner start */
+.banner_container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.banner_content {
+    width: 900px;
+    padding: 200px;
+    padding-left: 150px;
+    background-image: url("Group\ 14.png");
+}
+
+.banner_title {
+    font-size: 3rem;
+    color: #0B0223;
+    text-transform: uppercase;
+}
+
+.banner_desc {
+    padding: 10px 0;
+    font-size: 1.4rem;
+
+}
+
+.banner_img {}
+
+/* banner end */
+/* responsive style */
+/* small device */
+
+@media screen and (max-width: 576px) {
+    /* nav and banner start */
+    .navbar,
+    .banner_container {
+        flex-direction: column;
+    }
+    .navbar{
+        padding: 10px;
+    }
+    .banner_content {
+        width: 200px;
+        padding: 50px;
+    }
+    .section_title_color{
+        font-size: 4rem;
+    }
+    .banner_content img{
+        width: 100%;
+    }
+    .btn_priamry {
+        font-size: 1rem;
+        padding: 15px;
+    }
+    /* nav and banner end */
+}
+/* tablet or midium device */
+@media screen and (min-width: 576px) and (max-width: 960px) {
+    .navbar,
+    .banner_container {
+        flex-direction: column;
+    }
+    .navbar{
+        padding: 10px;
+    }
+    .banner_content {
+        width: 200px;
+        padding: 50px;
+    }
+    .section_title_color{
+        font-size: 4rem;
+    }
+    .banner_content img{
+        width: 100%;
+    }
+    .btn_priamry {
+        font-size: 1.2rem;
+        padding: 15px;
+    }
+}
