--- a/style/style.css
+++ b/style/style.css
@@ -96,8 +96,7 @@ body {
 
 .banner_content {
     width: 900px;
-    padding: 200px;
-    padding-left: 150px;
+    padding: 51px 70px;
     background-image: url("Group\ 14.png");
 }
 
@@ -106,16 +105,23 @@ body {
     color: #0B0223;
     text-transform: uppercase;
 }
-.goat{
+
+.goat {
     font-size: 6rem;
 }
+
 .banner_desc {
     padding: 10px 0;
     font-size: 1.4rem;
 }
-#second_btn{
+
+#second_btn {
     background-color: #4EC5F7;
     margin: 0 10px;
+}
+
+.banner_img img {
+    width: 100%;
 }
 
 /* banner end */
@@ -128,21 +134,26 @@ main {
     display: flex;
 
 }
+
 .gamer_content {
     padding: 90px 40px;
     text-align: right;
 }
+
 .gamer_content h3 {
     font-size: 3rem;
 }
+
 .gamer_content p {
     font-size: 1.2rem;
     line-height: 1.9rem;
 }
+
 .gamer_content .purpose {
     font-size: 1.5rem;
     line-height: 2rem;
 }
+
 .gamer_content h4 {
     font-size: 2rem;
     color: #534C64;
@@ -150,41 +161,126 @@ main {
 
 /* gamer end */
 /* funny img container start */
-section{
-    padding: 180px 20;
+section {
+    padding: 50px 20px;
 }
-.funny_content{
+
+.funny_content {
     padding: 20px;
     text-align: center;
 }
-.funny_content h3{
+
+.funny_content h3 {
     font-size: 3rem;
 }
-.funny_content p{
+
+.funny_content p {
     font-size: 1.2rem;
     padding: 5px;
 }
-.funny_img_wrap{
+
+.funny_img_wrap {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
 
 }
-.funny_img_container p{
+
+.funny_img_container p {
     margin: 10px 0;
     font-size: 1.2rem;
     line-height: 1.8rem;
     font-weight: 500;
     color: #534C64;
 }
-.funny_img_container{
+
+.funny_img_container {
     transition: 1s;
 }
-.funny_img_container:hover{
+
+.funny_img_container:hover {
     transform: scale(1.1);
     z-index: 1;
 }
-/* funny img container end */
 
+/* funny img container end */
+/* downloads start */
+.downloads_container {
+    margin-top: 0;
+    padding-bottom: 0;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.download_title {
+    margin-bottom: 220px;
+    margin-right: 50px;
+    text-align: center;
+    margin-left: 200px;
+}
+
+.download_title h3 {
+    padding-top: 0;
+    font-size: 3rem;
+    line-height: 3.5rem;
+}
+
+.download_title p {
+    font-size: 1.2rem;
+    line-height: 1.8rem;
+}
+
+.download_image img {
+    margin-left: 50px;
+}
+
+.badge_container {
+    position: relative;
+    bottom: 300px;
+    right: 200px;
+}
+
+/* downloads end */
+/* downloads 2 start */
+.downloads_container2 {
+    padding-top: 0;
+    display: flex;
+    justify-content: space-between;
+
+}
+
+.downloads_img_container2 img {
+    height: 100%;
+}
+
+.image_badge {
+    position: relative;
+    left: 550px;
+    bottom: 300px;
+}
+
+.downloads_content2 {
+    margin-left: 100px;
+    margin-top: 200px;
+    text-align: left;
+
+}
+
+.downloads_content2 h2 {
+    width: 464px;
+    font-size: 3rem;
+    line-height: 3.8rem;
+
+}
+
+.downloads_content2 p {
+    width: 480px;
+    font-size: 1.2rem;
+    line-height: 1.9rem;
+    
+}
+
+/* downloads 2 end */
 
 
 
@@ -200,7 +296,9 @@ section{
     /* nav and banner start */
     .navbar,
     .banner_container,
-    .gamer {
+    .gamer,
+    .downloads_container,
+    .downloads_container2 {
         flex-direction: column;
     }
 
@@ -246,17 +344,35 @@ section{
 
     /* gamer end */
     /* funny image statrt*/
-    .funny_img_wrap{
+    .funny_img_wrap {
         grid-template-columns: repeat(1, 1fr);
     }
+
     /* funny image end*/
+    /* downloads start */
+    .download_title {
+        margin-bottom: 100px;
+    }
+
+    .download_image img {
+        width: 143%;
+    }
+
+    /* downloads end */
+    /* downloads 2 start */
+    .downloads_content2{
+        margin-top: 0;
+    }
+    /* downloads 2 end */
 }
 
 /* tablet or midium device */
 @media screen and (min-width: 576px) and (max-width: 960px) {
 
     .navbar,
-    .banner_container {
+    .banner_container,
+    .downloads_container,
+    .downloads_container2 {
         flex-direction: column;
     }
 
@@ -287,10 +403,12 @@ section{
     .gamer img {
         width: 375px;
     }
+
     /* gamer end */
     /* funny image statrt*/
-    .funny_img_wrap{
+    .funny_img_wrap {
         grid-template-columns: repeat(2, 1fr);
     }
+
     /* funny image end*/
 }
