--- a/style/style.css
+++ b/style/style.css
@@ -277,10 +277,105 @@ section {
     width: 480px;
     font-size: 1.2rem;
     line-height: 1.9rem;
-    
+
 }
 
 /* downloads 2 end */
+/* btn strat */
+.button_container {
+    background: linear-gradient(90deg, rgba(255, 66, 165, 0.03) 0%, rgba(255, 66, 165, 0.03) 100%);
+    padding: 155px 136px;
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    row-gap: 20px;
+    column-gap: 50px;
+}
+
+.button_container img {
+    width: 2.4rem;
+}
+
+.button_container .all {
+    margin-right: 5px;
+    font-size: 1rem;
+    border: 0;
+    border-radius: 50px;
+    background: #FFF;
+    cursor: pointer;
+    transition: .3s ease;
+    box-shadow: 2px 3px 2px #FF42A5;
+
+}
+
+.button_container button:hover {
+    background-color: #FFFFFF;
+    color: #FF42A5;
+    transform: scale(1.2);
+}
+
+/* btn end*/
+/* footer start */
+footer {
+    background: #0B0223;
+    padding: 100px 0;
+}
+
+.footer_container {
+    text-align: center;
+}
+
+.footer_title {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.footer_title h3 {
+    margin-right: 30px;
+    color: #FFF;
+    font-size: 2.8rem;
+}
+
+.footer_menu ul {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+}
+
+.footer_menu li {
+    list-style: none;
+    margin: 40px;
+}
+
+.footer_menu li a {
+    text-decoration: none;
+    color: #FFF;
+    font-size: 1.2rem;
+}
+
+.privacy ul {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.privacy ul li {
+    list-style: none;
+    margin: 20px;
+}
+
+.privacy li a ,p{
+    margin: 20px 0;
+    text-decoration: none;
+    color: rgba(255, 255, 255, 0.60);
+    text-align: center;
+    font-size: 1rem;
+    font-weight: 500;
+}
+
+
+/* footer end */
 
 
 
@@ -298,7 +393,9 @@ section {
     .banner_container,
     .gamer,
     .downloads_container,
-    .downloads_container2 {
+    .downloads_container2,
+    .footer_menu ul,
+    .privacy ul {
         flex-direction: column;
     }
 
@@ -358,12 +455,24 @@ section {
         width: 143%;
     }
 
+    .downloads_img_container2 img {
+        display: none;
+    }
+
     /* downloads end */
     /* downloads 2 start */
-    .downloads_content2{
+    .downloads_content2 {
         margin-top: 0;
     }
+
     /* downloads 2 end */
+    /* btn strta */
+    .button_container {
+        grid-template-columns: repeat(3, 1fr);
+    }
+
+    /* btn end */
+
 }
 
 /* tablet or midium device */
