--- a/style/style.css
+++ b/style/style.css
@@ -136,7 +136,6 @@ main {
 }
 
 .gamer_content {
-    padding: 90px 40px;
     text-align: right;
 }
 
@@ -145,6 +144,7 @@ main {
 }
 
 .gamer_content p {
+    text-align: right;
     font-size: 1.2rem;
     line-height: 1.9rem;
 }
@@ -152,6 +152,7 @@ main {
 .gamer_content .purpose {
     font-size: 1.5rem;
     line-height: 2rem;
+    text-align: right;
 }
 
 .gamer_content h4 {
@@ -277,6 +278,7 @@ section {
     width: 480px;
     font-size: 1.2rem;
     line-height: 1.9rem;
+    text-align: left;
 
 }
 
@@ -284,7 +286,7 @@ section {
 /* btn strat */
 .button_container {
     background: linear-gradient(90deg, rgba(255, 66, 165, 0.03) 0%, rgba(255, 66, 165, 0.03) 100%);
-    padding: 155px 136px;
+    padding: 80px 136px;
     display: grid;
     grid-template-columns: repeat(5, 1fr);
     row-gap: 20px;
@@ -462,13 +464,18 @@ footer {
     /* downloads end */
     /* downloads 2 start */
     .downloads_content2 {
-        margin-top: 0;
+        margin: 0;
+        width: 100%;
+    }
+    .downloads_content2 p{
+        width: 100%;
     }
 
     /* downloads 2 end */
     /* btn strta */
     .button_container {
         grid-template-columns: repeat(3, 1fr);
+        padding: 0;
     }
 
     /* btn end */
